--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.list {
+  text-align: center;
+  list-style-position: inside;
+}
+
+li {
+  text-align: center;
+}
